<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/id_menu_add"
        android:orderInCategory="100"
        android:title="@string/str_menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/id_menu_delete"
        android:orderInCategory="100"
        android:title="@string/str_menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/id_menu_about"
        android:orderInCategory="100"
        android:title="@string/str_menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/id_menu_setting"
        android:orderInCategory="100"
        android:title="@string/str_menu_setting"
        app:showAsAction="never" />

</menu>