<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shize.listdemo.activity.RecyclerViewActivity">

    <Button
        android:id="@+id/id_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setLinearLayout"
        android:text="@string/str_recycler_linear" />

    <Button
        android:id="@+id/id_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_linear_layout"
        android:onClick="setGridLayout"
        android:text="@string/str_recycler_grid" />

    <Button
        android:id="@+id/id_stagger_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_grid_layout"
        android:onClick="setStaggerLayout"
        android:text="@string/str_recycler_stagger" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/id_recycler_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_stagger_layout" />

</RelativeLayout>
